//============================================================================//
//                                                                            //
//                Copyright Â© 2015 - 2020 Subterranean Security               //
//                                                                            //
//  This source file is subject to the terms of the Mozilla Public License    //
//  version 2. You may not use this file except in compliance with the MPL    //
//  as published by the Mozilla Foundation at:                                //
//                                                                            //
//    https://mozilla.org/MPL/2.0                                             //
//                                                                            //
//=========================================================S A N D P O L I S==//
syntax = "proto3";

package net;

import "com/sandpolis/core/proto/util/platform.proto";
import "com/sandpolis/core/proto/util/location.proto";

option java_package = "com.sandpolis.core.proto.net";
option optimize_for = CODE_SIZE;

/**
 * Request: Stop a Stream
 * Response: rs_outcome
 */
message RQ_StreamStop {

    // The stream ID of the stream to stop
    int32 id = 1;
}

message RQ_ProfileStream {

    // The desired stream ID
    int32 id = 1;
}

message EV_ProfileStream {

    string uuid = 1;
    int32 cvid = 2;

    util.OsType platform = 3;
    bool online = 4;
    string ip = 5;
    string hostname = 6;
    util.Location location = 8;
}
